--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css">
     
 </head>
-<body oncontextmenu="return-false">
+<body oncontextmenu="return false">
 
       <nav class="navbar fixed-top navbar-expand-lg navbar-light">
         <div class="container-fluid py-1">
