--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-switch@3.3.4/dist/css/bootstrap3/bootstrap-switch.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://sparrow-gif.github.io/profile/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Portfolio">
+<meta property="og:description" content="">
+<meta property="og:image" content="">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="sparrow-gif.github.io">
+<meta property="twitter:url" content="https://sparrow-gif.github.io/profile/">
+<meta name="twitter:title" content="Portfolio">
+<meta name="twitter:description" content="">
+<meta name="twitter:image" content="">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
     
 </head>
 <body oncontextmenu="return false">
