--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title> Somnath Pal - Web Developer & Designer </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
@@ -14,16 +14,16 @@
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://sparrow-gif.github.io/profile/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Portfolio">
-<meta property="og:description" content="">
+<meta property="og:title" content="Somnath Pal - Web Developer & Designer">
+<meta property="og:description" content="Discover my portfolio showcasing expertise in web development and design. Explore projects, skills, and get in touch today.">
 <meta property="og:image" content="">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="sparrow-gif.github.io">
 <meta property="twitter:url" content="https://sparrow-gif.github.io/profile/">
-<meta name="twitter:title" content="Portfolio">
-<meta name="twitter:description" content="">
+<meta name="twitter:title" content="Somnath Pal - Web Developer & Designer">
+<meta name="twitter:description" content="Discover my portfolio showcasing expertise in web development and design. Explore projects, skills, and get in touch today.">
 <meta name="twitter:image" content="">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
