--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
        </p>
         <div class="skills py-2">
             <div class="mb-4">
-                <h5> CSS </h5>
+                <h5> CSS / SASS </h5>
                 <div class="skill-bar">
                     <div class="percentage-label">90%</div>
                     <div class="skill-bar-fill bg-primary" data-width="90%"></div>
@@ -161,6 +161,13 @@
                 <div class="skill-bar">
                     <div class="percentage-label">55%</div>
                     <div class="skill-bar-fill bg-warning" data-width="55%"></div>
+                </div>
+            </div>
+            <div class="mb-4">
+                <h5>git / gitHub </h5>
+                <div class="skill-bar">
+                    <div class="percentage-label">55%</div>
+                    <div class="skill-bar-fill bg-success" data-width="70%"></div>
                 </div>
             </div>
         </div>
