--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav class="navbar fixed-top navbar-expand-lg navbar-light">
         <div class="container-fluid py-1">
             <!-- Exit Icon -->
-            <span class="navbar-icon"><i class="fa-solid fa-arrow-up-from-bracket"></i></span>
+            <a href="https://api.whatsapp.com/send?text=https://earnpaytmcash.in/earn/cash" class="navbar-icon"><i class="fa-solid fa-arrow-up-from-bracket"></i></a>
             
             <!-- Right Icons -->
             <div class="ms-auto form-check form-switch d-flex">
