--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             Stay Connected With Me
         </h2>
         <div class="footer-email">
-            <a href="mailto:support@ibrahimodeh.com" style="color: #fff;"> pal116719@gmail.com </a>
+            <a href="mailto:pal116719@gmail.com" style="color: #fff;"> pal116719@gmail.com </a>
         </div>
         <div class="social-icons mt-3">
             <a href="#"><i class="fab fa-skype"></i></a>
