--- a/index.html
+++ b/index.html
@@ -315,14 +315,18 @@
     <div class="tab-content p-3" id="Project">
             <h1 class="text-center mb-4">Our Projects</h1>
             <div class="row">
-                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">
-                    <a href="#" class="d-block">
-                        <div class="project-item">
-                            <img src="https://picsum.photos/300/200?random=1" alt="Project 1" class="img-fluid">
+                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">     <!------Project 01-------->
+                    <div class="image-container">
+                       <img src="https://picsum.photos/id/1011/300/200" alt="Sample Image 1">
+                       <div class="icon-overlay">
+                          <!-- Show Icon -->
+                          <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('https://picsum.photos/id/1011/600/400')"></i>
+                          <!-- Link Icon -->
+                          <i class="bi bi-link-45deg icon" onclick="window.location.href='https://www.example1.com'"></i>
                         </div>
-                    </a>
+                     </div>
                 </div>
-                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">
+                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">     <!------Project 02-------->
                     <a href="#" class="d-block">
                         <div class="project-item">
                             <img src="https://picsum.photos/300/200?random=2" alt="Project 2" class="img-fluid">
