--- a/index.html
+++ b/index.html
@@ -394,6 +394,22 @@
 </main>
 
 
+    <!-- Modal -->
+<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="imageModalLabel">Image Preview</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-center">
+                <img id="modalImage" src="" alt="Sample Image" class="img-fluid">
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <footer class="footer">
     <div class="container">
         <h2 class="footer-text">
