--- a/index.html
+++ b/index.html
@@ -488,5 +488,11 @@
         });
     </script>
 
+    <script>
+    function showImageModal(imageSrc) {
+        document.getElementById('modalImage').src = imageSrc;
+    }
+</script>
+
 </body>
 </html>
