--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             <div class="row">
                 <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">     <!------Project 01-------->
                     <div class="image-container">
-                       <img src="https://picsum.photos/id/1011/300/200" alt="Sample Image 1">
+                       <img src="https://picsum.photos/300/200?random=1" alt="Sample Image 1">
                        <div class="icon-overlay">
                           <!-- Show Icon -->
                           <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('https://picsum.photos/id/1011/600/400')"></i>
@@ -329,34 +329,50 @@
                      </div>
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">     <!------Project 02-------->
-                    <a href="#" class="d-block">
-                        <div class="project-item">
-                            <img src="https://picsum.photos/300/200?random=2" alt="Project 2" class="img-fluid">
+                    <div class="image-container">
+                       <img src="https://picsum.photos/300/200?random=2" alt="Sample Image 1">
+                       <div class="icon-overlay">
+                          <!-- Show Icon -->
+                          <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('https://picsum.photos/id/1011/600/400')"></i>
+                          <!-- Link Icon -->
+                          <i class="bi bi-link-45deg icon" onclick="window.location.href='https://www.example1.com'"></i>
                         </div>
-                    </a>
+                     </div>
                 </div>
-                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">
-                    <a href="#" class="d-block">
-                        <div class="project-item">
-                            <img src="https://picsum.photos/300/200?random=3" alt="Project 3" class="img-fluid">
+                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">    <!------Project 03--------->
+                    <div class="image-container">
+                       <img src="https://picsum.photos/300/200?random=3" alt="Sample Image 1">
+                       <div class="icon-overlay">
+                          <!-- Show Icon -->
+                          <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('https://picsum.photos/id/1011/600/400')"></i>
+                          <!-- Link Icon -->
+                          <i class="bi bi-link-45deg icon" onclick="window.location.href='https://www.example1.com'"></i>
                         </div>
-                    </a>
+                     </div>
                 </div>
-                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">
-                    <a href="#" class="d-block">
-                        <div class="project-item">
-                            <img src="https://picsum.photos/300/200?random=4" alt="Project 4" class="img-fluid">
+                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">      <!------Project 04-------->
+                    <div class="image-container">
+                       <img src="https://picsum.photos/300/200?random=4" alt="Sample Image 1">
+                       <div class="icon-overlay">
+                          <!-- Show Icon -->
+                          <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('https://picsum.photos/id/1011/600/400')"></i>
+                          <!-- Link Icon -->
+                          <i class="bi bi-link-45deg icon" onclick="window.location.href='https://www.example1.com'"></i>
                         </div>
-                    </a>
+                     </div>
                 </div>
-                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">
-                    <a href="#" class="d-block">
-                        <div class="project-item">
-                            <img src="https://picsum.photos/300/200?random=5" alt="Project 5" class="img-fluid">
+                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">       <!------Project 05-------->
+                    <div class="image-container">
+                       <img src="https://picsum.photos/300/200?random=5" alt="Sample Image 1">
+                       <div class="icon-overlay">
+                          <!-- Show Icon -->
+                          <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('https://picsum.photos/id/1011/600/400')"></i>
+                          <!-- Link Icon -->
+                          <i class="bi bi-link-45deg icon" onclick="window.location.href='https://www.example1.com'"></i>
                         </div>
-                    </a>
+                     </div>
                 </div>
-                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">
+                <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">      <!------Project 06-------->
                     <a href="#" class="d-block">
                         <div class="project-item">
                             <img src="https://picsum.photos/300/200?random=6" alt="Project 6" class="img-fluid">
