--- a/index.html
+++ b/index.html
@@ -319,12 +319,12 @@
             <div class="row">
                 <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">     <!------Project 01-------->
                     <div class="image-container">
-                       <img src="https://picsum.photos/300/200?random=1" alt="Sample Image 1">
+                       <img src="Blog.jpg" alt="Sample Image 1">
                        <div class="icon-overlay">
                           <!-- Show Icon -->
-                          <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('https://picsum.photos/id/1011/600/400')"></i>
+                          <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('Blog.mp4')"></i>
                           <!-- Link Icon -->
-                          <i class="bi bi-link-45deg icon" onclick="window.location.href='https://www.example1.com'"></i>
+                          <i class="bi bi-link-45deg icon" onclick="window.location.href='https://earnpaytmcash.in/'"></i>
                         </div>
                      </div>
                 </div>
