--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                        <img src="Blog.jpg" alt="Sample Image 1">
                        <div class="icon-overlay">
                           <!-- Show Icon -->
-                          <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('Blog.mp4')"></i>
+                          <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('Blog.jpg')"></i>
                           <!-- Link Icon -->
                           <i class="bi bi-link-45deg icon" onclick="window.location.href='https://earnpaytmcash.in/'"></i>
                         </div>
