--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
                 </div>
                 <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">     <!------Project 02-------->
                     <div class="image-container">
-                       <img src="https://picsum.photos/300/200?random=2" alt="Sample Image 1">
+                       <img src="Youtube.jpg" alt="Sample Image 1">
                        <div class="icon-overlay">
                           <!-- Show Icon -->
-                          <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('https://picsum.photos/id/1011/600/400')"></i>
+                          <i class="bi bi-eye-fill icon" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="showImageModal('Youtube.jpg')"></i>
                           <!-- Link Icon -->
-                          <i class="bi bi-link-45deg icon" onclick="window.location.href='https://www.example1.com'"></i>
+                          <i class="bi bi-link-45deg icon" onclick="window.location.href='Youtube.html'"></i>
                         </div>
                      </div>
                 </div>
