--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Profile Header -->
     <div class="author-header">
         <div class="author-profile">
-            <img src="https://picsum.photos/80" alt="Author Image" data-toggle="modal" data-target="#profileImageModal">
+            <img src="somnath.jpg" alt="Author Image" data-toggle="modal" data-target="#profileImageModal">
         </div>
         <div class="profile-name">
            <h1> Somnath Pal  </h1>
@@ -451,7 +451,7 @@
           <div class="close-button" data-dismiss="modal">
             <span>&times;</span>
           </div>
-          <img src="https://picsum.photos/640" alt="Author Image" class="img-fluid">
+          <img src="somnath.jpg" alt="Author Image" class="img-fluid">
         </div>
       </div>
     </div>
